--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<section class="slider" style="height: 400px; margin-top: 66px">
 		<div class="flexslider" style="height: 400px;">
 			<ul class="slides">
-				<li style="background-image: url('images/slider/banner fulkan.jpg');height: all;">
+				<li style="background-image: url('images/slider/banner home fulkan.jpg');height: all;">
 					
 					<div class="row">
 						<div class="slider-caption">
