--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a title="alfasuportel" rel="home" href="index.html" pa>
+              <a title="alfa suportel" rel="home" href="index.html" pa>
                 <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
               </a>
             </h1>
@@ -108,7 +108,7 @@
           <div class="wd-title-block">
             <h5>Porque escolher a Alfa Suportel</h5>
           </div>
-          <p>A Suportel foi fundada em 1989, na época era apenas uma empresa que produzia trempe de fogão para reposição de peças, mas com o passar dos anos foi adquirindo experiência, credibilidade, maquinário para poder desenvolver novos produtos.
+          <p>A Suportel era apenas uma empresa que produzia trempe de fogão para reposição de peças, mas com o passar dos anos foi adquirindo experiência, credibilidade, maquinário para poder desenvolver novos produtos.
 
             Passamos por varias crises mundiais e internas, mas nunca deixamos de honrar com o nosso nome e compromisso junto aos clientes, fornecedores e não podemos esquecer de nossos colaboradores (funcionários), que são nossa riqueza.
           </p>
@@ -251,7 +251,7 @@
           </div>
         </li>
       </ul>
-      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+            <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
         <li>
           <h2 class="block-title">Informativos</h2>
           <div class="textwidget">
@@ -259,18 +259,19 @@
               cadastre-se para receber informações
               <div>
                 <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
-                <input type="submit" class="newslettersubmit" value="GO">
+                <input type="submit" class="newslettersubmit" value="ENVIAR">
                 <ul class="inline-list">              
                   <li class="facebook">
                   <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li class="instagram">
                     <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                  </li>      
-                  <li class="facebook">
+                  </li> 
+                      
+                  <li class="facebook wd-newsletter1">
                     <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
                   </li>
-                  <li class="instagram">
+                  <li class="instagram wd-newsletter1">
                     <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
                   </li>               
                 </ul>
