--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 										<div class="wd-project">
 											<a href="produtos.html?subcategoria={{ item.id }}"><img width="380" height="254" src="http://webliniaerp.com.br/{{ item.thumbnail }}" class="" alt="" style="height: 100px; width: 100px;">
 											<br>
-											<a class="hvr-glow"><h5>{{ item.descricao_categoria }}</h5></a>
+											<a class=" buttons button5"><h4>{{ item.descricao_categoria }}</h4></a>
 										</div>
 									</li>
 								</ul>
