--- a/item_produtos.html
+++ b/item_produtos.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br" ng-app="alfasuportel">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
-    <link rel="stylesheet" href="stylesheets/owl.carousel.css">
-    <link rel="stylesheet" href="stylesheets/owl.theme.css">
-    <link rel="stylesheet" href="stylesheets/animate.css">
-    <link rel="stylesheet" href="stylesheets/swiper.min.css">
-    <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
-    <link rel="stylesheet" href="stylesheets/app.css">
-    <link rel="stylesheet" href="stylesheets/custom-style.css">
-    <link rel="stylesheet" href="stylesheets/header.css">
-    <link rel="icon" href="images/logo/favicon 2.png" width="140" height="140">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+  <link rel="stylesheet" href="stylesheets/owl.carousel.css">
+  <link rel="stylesheet" href="stylesheets/owl.theme.css">
+  <link rel="stylesheet" href="stylesheets/animate.css">
+  <link rel="stylesheet" href="stylesheets/swiper.min.css">
+  <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
+  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="stylesheets/custom-style.css">
+  <link rel="stylesheet" href="stylesheets/header.css">
+  <link rel="icon" href="images/logo/favicon 2.png" width="140" height="140">
 
-    <style type="text/css">
-      .column+.column:last-child, 
-      .columns.sub-images+.column:last-child, 
-      .column+.columns.sub-images:last-child, 
-      .columns.sub-images+.columns:last-child {
-        float: left;
-      }
-    </style>
-  </head>
+  <style type="text/css">
+  .column+.column:last-child, 
+  .columns.sub-images+.column:last-child, 
+  .column+.columns.sub-images:last-child, 
+  .columns.sub-images+.columns:last-child {
+    float: left;
+  }
+</style>
+</head>
 <body ng-controller="itemProdutoController" style="padding-top: 87px;">
 
   <!-- Start Header -->
-
-
-<header class="l-header creative-layout">
+  <header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky fixed">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -56,7 +54,7 @@
                     <ul class="sub-menu dropdown">
                       <li id="menu-item-1316" ng-repeat="item in subcategorias">
                         <a class="has-icon" ng-show="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}">{{ item.descricao_categoria }}</a>
-                                  <a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                        <a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
                       </li>
                     </ul>
                   </li>
@@ -81,13 +79,9 @@
       </nav>
     </div>
   </header>
-
-
-
   <!-- End Header -->
 
   <!-- Start Title Bar -->
-
   <section class="banner-category" style="background: url('http://webliniaerp.com.br/{{ categoria_produto.banner }}') no-repeat center center;">
   </section>
   <!-- End Title Bar -->
@@ -97,44 +91,44 @@
     <div class="row">
       <h2 id="page-title" style="text-align: center;" class="title"> {{ produto.nome }} </h2><h4 >  </h4>
       <br>
-      <div class="small-12 large-4 columns">
+      <div class="small-12 large-6 columns">
         <div class="owl-testimonail owl-carousel owl-theme">
           <img class="attachment-flooring_blog-thumb size-flooring_blog-thumb wp-post-image"
-            src="http://webliniaerp.com.br/assets/imagens/produtos/{{ getProductSelectedImage().path }}">
+          src="http://webliniaerp.com.br/assets/imagens/produtos/{{ getProductSelectedImage().path }}">
         </div>
         <div>
           <div class="small-12 large-3 columns sub-images"
-            ng-repeat="image in produto.images | filter : { selected : false }">
-            <img src="http://webliniaerp.com.br/assets/imagens/produtos/{{ image.path }}"
-              ng-click="selectProductImage(image)">
-          </div>
+          ng-repeat="image in produto.images | filter : { selected : false }">
+          <img src="http://webliniaerp.com.br/assets/imagens/produtos/{{ image.path }}"
+          ng-click="selectProductImage(image)">
         </div>
-      </div>
-      <div class="small-12 large-6 columns box-scroll">
-        <div class="wd-title-block">
-          <h6>Descrição</h6>
-        </div>
-          <span>{{ produto.descricao_curta }}</span>
-          <br><br>
-          <h6>Informações Adicionais</h6>
-          <p ng-bind-html="descricao"></p>
       </div>
     </div>
-  </section>
-  
-  <section class="wd-section-project-page">
-    <div class="row animation-parent" data-animation-delay="100">
-      <div class="row">
-        <h4 class="m-b-15">PRODUTOS RELACIONADOS</h4>
-        <div class="wd-section-project">
-          <ul class="masque portfolio-grid small-block-grid-1  medium-block-grid-3 large-block-grid-4">
-            <li ng-repeat="item in relacionados | limitTo: 4"  class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 0ms;">
-              <div class="wd-project hvr-underline-from-center">
-                  <a href="item_produtos.html?produto={{ item.id }}"><img src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="" style="height: 300px; width: 300px;">
-                    <h4>{{ item.nome }}</h4>
-                  </a>
-                <br>
-              </div>
+    <div class="small-12 large-6 columns box-scroll">
+      <div class="wd-title-block">
+        <h6>Descrição</h6>
+      </div>
+      <span>{{ produto.descricao_curta }}</span>
+      <br><br>
+      <h6>Informações Adicionais</h6>
+      <p ng-bind-html="descricao"></p>
+    </div>
+  </div>
+</section>
+
+<section class="wd-section-project-page">
+  <div class="row animation-parent" data-animation-delay="100">
+    <div class="row">
+      <h4 class="m-b-15">PRODUTOS RELACIONADOS</h4>
+      <div class="wd-section-project">
+        <ul class="masque portfolio-grid small-block-grid-1  medium-block-grid-3 large-block-grid-4">
+          <li ng-repeat="item in relacionados | limitTo: 4"  class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 0ms;">
+            <div class="wd-project hvr-underline-from-center">
+              <a href="item_produtos.html?produto={{ item.id }}"><img src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="" style="height: 300px; width: 300px;">
+                <h4>{{ item.nome }}</h4>
+              </a>
+              <br>
+            </div>
           </ul>
         </div>
       </div>
@@ -188,18 +182,19 @@
               cadastre-se para receber informações
               <div>
                 <input type="text" class="email-adress" placeholder="EMAIL" size="20" value="" name="email-adress">
-                <input type="submit" class="newslettersubmit" value="GO">
+                <input type="submit" class="newslettersubmit" value="ENVIAR">
                 <ul class="inline-list">              
                   <li class="facebook">
-                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                   </li>
                   <li class="instagram">
                     <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
-                  </li>      
-                  <li class="facebook">
+                  </li> 
+
+                  <li class="facebook wd-newsletter1">
                     <a href="https://www.facebook.com/fulkancoco/"><i class="fa fa-facebook"></i></a>
                   </li>
-                  <li class="instagram">
+                  <li class="instagram wd-newsletter1">
                     <a href="https://www.instagram.com/fulkan_br/"><i class="fa fa-instagram"></i></a>
                   </li>               
                 </ul>
