conclusao alteração site

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 	<!-- Start Footer -->
 	<section class="wd-footer">
-		<div class="row animation-parent" data-animation-delay="180">
+		<div class="row " data-animation-delay="180">
 			<ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
 				<li>
 					<div class="textwidget">
