--- a/produtos.html
+++ b/produtos.html
@@ -121,8 +121,8 @@
 <!-- Start Footer -->
 
 <section class="wd-footer">
-  <div class="row animation-parent" data-animation-delay="180">
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+  <div class="row" data-animation-delay="180">
+    <ul class="block large-4 medium-4 columns animated " data-animated="">
       <li>
         <div class="textwidget">
           <div class="widget-logo">
@@ -132,7 +132,7 @@
         </div>
       </li>
     </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+    <ul class="block large-4 medium-4 columns animated " data-animated="">
       <li>
         <h2 class="block-title">Entrar em contato</h2>
         <div class="textwidget">
@@ -155,7 +155,7 @@
         </div>
       </li>
     </ul>
-    <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+    <ul class="block large-4 medium-4 columns animated " data-animated="">
       <li>
         <h2 class="block-title">Informativos</h2>
         <div class="textwidget">
