--- a/subcategoria.html
+++ b/subcategoria.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="wd-text-icon-style5 animated fadeInUp" data-animated="fadeInUp">
                   <ul class="slider masque portfolio-grid small-block-grid-2  medium-block-grid-2 large-block-grid-5">
-                    <li ng-if="(item.filhos == null)" ng-repeat="produto in item.produtos | limitTo: 4">
+                    <li ng-if="(item.filhos == null)" ng-repeat="produto in item.produtos | limitTo: 5">
                       <div class="wd-project ">
                         <a href="item_produtos.html?produto={{ produto.id }}"><img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ produto.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr" alt="" style="height: 100px; width: 100px;">
                           <h4 class="button5">{{ produto.nome }}</h4>
@@ -134,8 +134,8 @@
     <!-- Start Footer -->
 
     <section class="wd-footer">
-      <div class="row animation-parent" data-animation-delay="180">
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+      <div class="row " data-animation-delay="180">
+        <ul class="block large-4 medium-4 columns animated " data-animated="">
           <li>
             <div class="textwidget">
               <div class="widget-logo">
@@ -145,7 +145,7 @@
             </div>
           </li>
         </ul>
-        <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+        <ul class="block large-4 medium-4 columns animated " data-animated="">
           <li>
             <h2 class="block-title">Entrar em contato</h2>
             <div class="textwidget">
@@ -168,7 +168,7 @@
             </div>
           </li>
         </ul>
-      <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
+      <ul class="block large-4 medium-4 columns animated " data-animated="">
         <li>
           <h2 class="block-title">Informativos</h2>
           <div class="textwidget">
